src/components/header/header.css
.header {
  height: 50px;
  position: sticky;
  top: 0;
  display: flex;
  align-items: center;
  font-family: 'Oswald', sans-serif;
  z-index: 999;
  background-color: white;
  margin-right: 7px;
}

.header-left {
  flex: 1;
  display: flex;
  align-items: center;
  justify-content: center;
  margin-left: 10px;
  font-size: 1.6rem;
  font-weight: 500;
  font-family: 'Lora', sans-serif;
}

.logo {
  padding: 6px;
  border-radius: 5px;
  color: #b39656;
}

.header-right {
  flex: 1;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 20px;
  margin-right: 10px;
}

.header-center {
  flex: 2;
}

.dropdown-trigger {
  display: none;
  margin-left: 30px;
  font-size: 1.2rem;
  z-index: 1;
  cursor: pointer;
  transition: 0.4s;
}

.rotate180 {
  transform: rotate(180deg);
}

.header-list {
  list-style: none;
  display: flex;
  justify-content: center;
  gap: 20px;
  transition: 0.4s;
}

#show-dropdown {
  opacity: 1;
  top: 40px;
  left: -60px;
  display: flex;
  transform: scale(1);
}

.header-image {
  width: 40px;
  height: 40px;
  border-radius: 50%;
  object-fit: cover;
}

.header-icon {
  font-size: 1rem;
  cursor: pointer;
}

.header-item {
  font-weight: 200;
  font-size: 1.3rem;
  cursor: pointer;
}

.header-search-icon {
  cursor: pointer;
  font-size: 1.5rem;
}

.account {
  font-size: 1.5rem;
  border-radius: 50%;
  padding: 10px;
}

@media (max-width: 700px) {
  .header {
    flex-wrap: wrap;
  }

  .header-center {
    position: relative;
    display: flex;
  }

  .dropdown-trigger {
    display: initial;
  }

  .header-center ul {
    position: absolute;
    width: 100px;
    flex-direction: column;
    align-items: center;
    background-color: white;
    opacity: 0;
    transform: scale(0);
    top: -60px;
    left: 0;
    padding: 10px;
    border: thin solid black;
    border-radius: 5px;
  }
}

